Fix header alignment: remove asymmetric padding in price section

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,9 +28,10 @@ h1,
   vertical-align: middle;
 }
 
-h1 {
+.logo-title {
   font-size: 40px;
 }
+
 .logo-icon {
   width: 60px;
   height: 60px;
@@ -321,6 +322,48 @@ footer a {
   }
 }
 
+@media (max-width: 700px) {
+  .logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .slogan{
+    display: none;
+  }
+
+  #logo-title {
+    font-size: 2.5rem;
+  }
+
+  .header-main {
+    padding: 0;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .price-section > *{
+    margin: 0;
+  }
+  .price-section {
+    padding: 0;
+    width: 100%;
+    display: flex;
+    border: solid red 1px;
+    gap: 20px;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .priceKw-section > span{
+    display: none;
+  }
+
+}
+
 .device-tooltip {
   position: absolute;
   top: -25px;
@@ -462,5 +505,4 @@ footer a {
   color: white;
   text-decoration: none;
   border-radius: 5px;
-
 }
